# Supervisor-Research-Orchestrator-with-Langgraph

./: .gitignore  AI_Engineer_1-2Month_Roadmap.md  README.md  completed_research.md  conftest.py  final_output.md  graph.py  output.md  pyproject.toml  researched_data.md  state.py  tools.py
evals/: test_pipeline.py
