[project]
name = "graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.0",
    "fastapi>=0.136.3",
    "ipython>=9.14.0",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-aws>=1.5.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-cli[inmem]>=0.4.29",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
    "uvicorn>=0.48.0",
]
